--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-parallax-tilt": "^1.7.309",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
