--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "hamburger-react": "^2.5.2",
     "motion": "^12.23.12",
     "next": "15.5.3",
     "react": "19.1.0",
