--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.553.0",
     "motion": "^12.23.12",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.309",
+    "react-router-dom": "^7.9.6",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
